# dioxus-on-shuttle

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  Shuttle.toml  build.rs  justfile
.cargo/: config.toml
src/: lib.rs
